# trunkls

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: attr_state.rs  init.rs  main.rs  sample.html
src/lsp/: document.rs  mod.rs
src/lsp/completions/: mod.rs
src/lsp/docs/: mod.rs
src/lsp/docs/inline/: mod.rs
src/lsp/docs/rel_inline/: mod.rs
src/lsp/hover/: mod.rs
src/lsp/queries/: attributes.rs
src/texter/: change.rs  mod.rs  sample.html  updateables.rs  utils.rs
src/texter/core/: br_indexes.rs  encodings.rs  lines.rs  mod.rs  text.rs
src/utils/: mod.rs
vscode/: extension.js  htmx-lsp-0.0.1.vsix  package-lock.json  package.json
