[package]
name = "trunkls"
version = "0.1.2"
edition = "2021"
authors = ["Tayfun Bocek <tayfunbocek@live.ca>"]
description = "A language server for Trunk's custom HTML attributes"
readme = "README.md"
repository = "https://github.com/airblast-dev/trunkls"
license = "GPL-3.0-or-later"
keywords = ["html", "lsp", "trunk", "wasm", "editor"]

[dependencies]
lsp-types = { version = "0.97.0" }
lsp-server = { version = "0.7.7" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.20", features = ["derive"] }
shellexpand = { version = "3.1.0" }
anyhow = { version = "1.0.92" }
serde_json = "1.0.132"
fxhash = "0.2.1"
tree-sitter = "0.24.3"
tree-sitter-html = "0.23.0" 
streaming-iterator = "0.1.9"
constcat = "0.5.1"
texter = { version = "0.1.2", features = ["tree-sitter", "lsp-types"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
